fix footer positioning when search form overflows

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,7 +9,7 @@
     position:relative;
     margin: 0 auto -50px;
 }
-.push {
+#push {
     height: 80px;
 }
 #footer {
